--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1><%= @page_title %></h1>
+<p>About <%= @mother_to_be %>'s Baby Shower.</p>
