--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,7 @@
-<h1><%= @page_title %></h1>
-<p>About <%= @mother_to_be %>'s Baby Shower.</p>
+<div class="inner cover">
+    <h1><%= @page_title %></h1>
+    <p class="lead">About <%= @mother_to_be %>'s Baby Shower.</p>
+    <p class="lead">
+        <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+    </p>
+</div>
