--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,7 @@
-<h1><%= @page_title %></h1>
-<p>Contact <%= @mother_to_be %> here.</p>
+<div class="inner cover">
+    <h1><%= @page_title %></h1>
+    <p class="lead">Contact <%= @mother_to_be %> here.</p>
+    <p class="lead">
+        <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+    </p>
+</div>
