implemented copyright generator

--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="mastfoot">
     <div class="inner">
-        <p>Copyright 2017 | <%= link_to 'Help', help_path %></p>
+        <p><%= copyright_generator %> | <%= link_to 'Help', help_path %></p>
     </div>
 </div>
