--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,8 @@ html,
 body {
   height: 100%;
   background-color: #333;
+  background-image: url('./shutterstock_460927420.jpg');
+  background-size: cover;
 }
 body {
   color: #fff;
@@ -93,7 +95,7 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: bold;
-  color: rgba(255,255,255,.5);
+  color: rgba(255,255,255,.875);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
@@ -140,7 +142,7 @@ body {
  */
 
 .mastfoot {
-  color: rgba(255,255,255,.5);
+  color: rgba(255,255,255,.875);
 }
 
 
