added licensing note to readme

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,7 @@ html,
 body {
   height: 100%;
   background-color: #333;
+  /* Replace the background image below if you do not have a license for it. */
   background-image: url('./shutterstock_460927420.jpg');
   background-size: cover;
 }
