--- a/app/views/shared/_update_nav.html.erb
+++ b/app/views/shared/_update_nav.html.erb
@@ -1,7 +1,6 @@
-<div class="masthead clearfix">
-    <div class="inner">
-        <h3 class="masthead-brand">Baby Shower</h3>
-        <nav class="nav nav-masthead">
+<div class="blog-masthead">
+    <div class="container">
+        <nav class="nav blog-nav">
             <%= link_to 'Home', root_path, class: 'nav-link' %>
             <%= link_to 'About', about_path, class: 'nav-link' %>
             <%= link_to 'Updates', updates_path, class: 'nav-link' %>
