--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -1,29 +1,10 @@
-<p id="notice"><%= notice %></p>
+<div class="col-sm-8 blog-main">
 
-<h1>Updates</h1>
+  <%= render @updates %>
+        
+  <nav class="blog-pagination">
+    <a class="btn btn-outline-primary" href="#">Older</a>
+    <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
+  </nav>
 
-<table>
-  <thead>
-    <tr>
-      <th>Body</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @updates.each do |update| %>
-      <tr>
-        <td><%= update.body %></td>
-        <td><%= update.image %></td>
-        <td><%= link_to 'Show', update %></td>
-        <td><%= link_to 'Edit', edit_update_path(update) %></td>
-        <td><%= link_to 'Destroy', update, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Update', new_update_path %>
+</div><!-- /.blog-main -->
