adjusted pages for updates: show, new, edit and form

--- a/app/views/updates/edit.html.erb
+++ b/app/views/updates/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Update</h1>
+<div class="col-sm-8 blog-main">
 
-<%= render 'form', update: @update %>
+    <%= render 'form', update: @update %>
 
-<%= link_to 'Show', @update %> |
-<%= link_to 'Back', updates_path %>
+    <%= link_to 'Show', @update %> |
+    <%= link_to 'Back', updates_path %>
+
+</div><!-- /.blog-main -->
