--- a/app/views/updates/new.html.erb
+++ b/app/views/updates/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Update</h1>
+<div class="col-sm-8 blog-main">
 
-<%= render 'form', update: @update %>
+    <%= render 'form', update: @update %>
 
-<%= link_to 'Back', updates_path %>
+    <%= link_to 'Back', updates_path %>
+
+</div><!-- /.blog-main -->
