--- a/app/views/updates/show.html.erb
+++ b/app/views/updates/show.html.erb
@@ -1,14 +1,9 @@
-<p id="notice"><%= notice %></p>
+<div class="col-sm-8 blog-main">
 
-<p>
-  <strong>Body:</strong>
-  <%= @update.body %>
-</p>
+  <p><%= @update.body %></p>
 
-<p>
-  <strong>Image:</strong>
-  <%= @update.image %>
-</p>
+  <%= image_tag @update.image, alt:"" unless @update.image.nil? %>
 
-<%= link_to 'Edit', edit_update_path(@update) %> |
-<%= link_to 'Back', updates_path %>
+  <p><%= link_to 'Edit', edit_update_path(@update) %> |
+  <%= link_to 'Back', updates_path %></p>
+</div><!-- /.blog-main -->
