--- a/app/views/shared/_update_header.html.erb
+++ b/app/views/shared/_update_header.html.erb
@@ -2,5 +2,6 @@
     <div class="container">
         <h1 class="blog-title"><%= @page_title %></h1>
         <p class="lead blog-description">The latest updates on <%= @mother_to_be %>'s Baby Shower</p>
+        <%= link_to "Write a New Update", new_update_path %>
     </div>
 </div>
