implemented cards for updates feature

--- a/app/views/updates/show.html.erb
+++ b/app/views/updates/show.html.erb
@@ -1,9 +1,14 @@
 <div class="col-sm-8 blog-main">
-
-  <p><%= @update.body %></p>
-
-  <%= image_tag @update.image, alt:"" unless @update.image.nil? %>
-
-  <p><%= link_to 'Edit', edit_update_path(@update) %> |
-  <%= link_to 'Back', updates_path %></p>
+  <div class="card blog-post">
+    <%= image_tag @update.image, alt: "", class: "card-img-top" unless @update.image.nil? %>
+    <div class="card-block">
+        <p class="card-text"><%= @update.body %></p>
+        <p class="card-text blog-post-meta"><%= @update.created_at %></p>
+        <p class="card-text blog-post-meta">
+            <%= link_to 'Edit', edit_update_path(@update), class: "btn btn-secondary" %>
+            <%= link_to 'Delete Update', @update, method: :delete, data: { confirm: 'Are you sure you want to delete that update?' }, class: "btn btn-danger" %>
+        </p>
+    </div>
+  </div>
+  <p><%= link_to 'Back', updates_path %></p>
 </div><!-- /.blog-main -->
