--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
 
           <%= render 'shared/application_nav' %>
 
+          <p class="notice"><%= notice %></p>
+          <p class="alert"><%= alert %></p>
+
           <%= yield %>
 
           <%= render 'shared/application_footer' %>
