--- a/app/views/layouts/update.html.erb
+++ b/app/views/layouts/update.html.erb
@@ -22,6 +22,9 @@
       <div class="container">
         <div class="row">
 
+          <p class="notice"><%= notice %></p>
+          <p class="alert"><%= alert %></p>
+
           <%= yield %>
 
           <%= render 'shared/update_sidebar' %>
