--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -6,6 +6,12 @@
             <%= link_to 'About', about_path, class: 'nav-link' %>
             <%= link_to 'Updates', updates_path, class: 'nav-link' %>
             <%= link_to 'Contact', contact_path, class: 'nav-link' %>
+            <% if current_user %>
+                <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
+            <% else %>
+                <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+                <%= link_to "Register", new_user_registration_path, class: "nav-link" %>
+            <% end %>
         </nav>
     </div>
 </div>
