--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -1,5 +1,8 @@
 <div class="col-sm-8 blog-main">
 
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
   <%= render @updates %>
         
   <%= paginate @updates %>
