--- a/app/views/updates/show.html.erb
+++ b/app/views/updates/show.html.erb
@@ -1,4 +1,8 @@
 <div class="col-sm-8 blog-main">
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
   <div class="card blog-post">
     <%= image_tag @update.image, alt: "", class: "card-img-top" unless @update.image.nil? %>
     <div class="card-block">
