finished initial styling of devise pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -196,3 +196,12 @@ body {
 .auth-links a {
   color: rgba(0,0,0,0.875);
 }
+
+.login {
+
+  .card {
+    width: 22rem;
+    margin: 0 auto;
+    float: none;
+  }
+}
