--- a/app/views/shared/_update_header.html.erb
+++ b/app/views/shared/_update_header.html.erb
@@ -2,6 +2,8 @@
     <div class="container">
         <h1 class="blog-title"><%= @page_title %></h1>
         <p class="lead blog-description">The latest updates on <%= @mother_to_be %>'s Baby Shower</p>
-        <%= link_to "Write a New Update", new_update_path %>
+        <% if current_user.has_roles?(:admin, :mom, :helper) %>
+            <%= link_to "Write a New Update", new_update_path %>
+        <% end %>
     </div>
 </div>
