--- a/app/views/updates/_update.html.erb
+++ b/app/views/updates/_update.html.erb
@@ -4,8 +4,10 @@
         <p class="card-text"><%= update.body %></p>
         <p class="card-text blog-post-meta"><%= time_ago_in_words(update.created_at) %> ago</p>
         <p class="card-text blog-post-meta">
-            <%= link_to 'Edit', edit_update_path(update), class: "btn btn-secondary" %>
-            <%= link_to 'Delete Update', update, method: :delete, data: { confirm: 'Are you sure you want to delete that update?' }, class: "btn btn-danger" %>
+            <% if current_user.has_roles?(:admin, :mom, :helper) %>
+                <%= link_to 'Edit', edit_update_path(update), class: "btn btn-secondary" %>
+                <%= link_to 'Delete Update', update, method: :delete, data: { confirm: 'Are you sure you want to delete that update?' }, class: "btn btn-danger" %>
+            <% end %>
         </p>
     </div>
 </div><!-- /.blog-post -->
