--- a/app/views/updates/show.html.erb
+++ b/app/views/updates/show.html.erb
@@ -4,10 +4,10 @@
     <p class="alert"><%= alert %></p>
 
   <div class="card blog-post">
-    <%= image_tag @update.image, alt: "", class: "card-img-top" unless @update.image.nil? %>
+    <%= image_tag @update.image, alt: "", class: "img-fluid card-img-top" unless @update.image.nil? %>
     <div class="card-block">
         <p class="card-text"><%= @update.body %></p>
-        <p class="card-text blog-post-meta"><%= time_ago_in_words(@update.created_at) %> ago</p>
+        <p class="card-text blog-post-meta"><%= time_ago_in_words(@update.created_at) %> ago by <%= @update.user.name %></p>
         <p class="card-text blog-post-meta">
             <% if current_user.has_roles?(:admin, :mom, :helper) %>
                 <%= link_to 'Edit', edit_update_path(@update), class: "btn btn-secondary" %>
