--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,6 +39,12 @@
           </div>
 
           <div class="form-group">
+          <%= f.label :avatar %></br>
+          <%= image_tag current_user.avatar, alt: "", class: "img-fluid rounded" unless current_user.avatar.nil? %>
+          <%= f.text_field :avatar, class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
             <%= f.label :current_password %>
             <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
             <small id="currentHelp" class="form-text text-muted">We need your current password to confirm your changes.</small>
