--- a/app/assets/stylesheets/updates.scss
+++ b/app/assets/stylesheets/updates.scss
@@ -44,7 +44,7 @@ h6, .h6 {
  */
 
 .blog-masthead {
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
   background-color: #428bca;
   -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
           box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
@@ -87,6 +87,7 @@ h6, .h6 {
  */
 
 .blog-header {
+  margin-top: 3rem;
   padding-bottom: 1.25rem;
   margin-bottom: 2rem;
   border-bottom: .05rem solid #eee;
@@ -166,6 +167,28 @@ h6, .h6 {
   background-color: #f9f9f9;
   border-top: .05rem solid #e5e5e5;
 }
+
 .blog-footer p:last-child {
   margin-bottom: 0;
+}
+
+.profile-header {
+
+  .lead {
+    padding-top: 1em;
+  }
+}
+
+.cover-image {
+  height: 400px;
+  width: 100vw;
+}
+
+.show-avatar {
+  margin-top: -7.5em;
+  
+  img {
+    border: solid .4em #FFF;
+    width: 90%;    
+  }
 }
