--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -6,10 +6,10 @@
             </div>
             <div class="col-sm-9">
                 <div class="row">
-                    <p class="card-text"><%= user.name %></p>
+                    <p class="h5"><%= user.name %></p>
                 </div>
                 <div class="row">
-                    <p class="card-text"><%= @description %></p>
+                    <p class="lead card-text"><%= @description %></p>
                 </div>
             </div>
         </div>
