--- a/app/views/updates/_update.html.erb
+++ b/app/views/updates/_update.html.erb
@@ -4,7 +4,7 @@
         <p class="lead card-text"><%= update.body %></p>
         <p class="card-text blog-post-meta">Posted <%= time_ago_in_words(update.created_at) %> ago by <%= update.user.name %></p>
         <p class="card-text blog-post-meta">
-            <% if current_user.has_roles?(:admin, :mom, :helper) %>
+            <% if current_user.has_roles?(:admin, :mom, :helper) && update.user == current_user %>
                 <%= link_to 'Edit', edit_update_path(update), class: "btn btn-secondary" %>
                 <%= link_to 'Delete Update', update, method: :delete, data: { confirm: 'Are you sure you want to delete that update?' }, class: "btn btn-danger" %>
             <% end %>
