refactored default mom variable to the user with mom role instead of string

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><%= @page_title %> | <%= @mother_to_be %>'s Baby Shower</title>
+    <title><%= @page_title %> | <%= @mother_to_be.name %>'s Baby Shower</title>
     <%= csrf_meta_tags %>
 
     <meta name="description" content="">
