--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
     <h1><%= @page_title %></h1>
-    <p class="lead">Here are some Frequently Asked Questions about <%= @mother_to_be %> Baby Shower.</p>
+    <p class="lead">Here are some Frequently Asked Questions about <%= @mother_to_be.name %> Baby Shower.</p>
     <p class="lead">
         <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
     </p>
