--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
     <h1><%= @page_title %></h1>
-    <p class="lead">The home page for <%= @mother_to_be %>'s Baby Shower.</p>
+    <p class="lead">The home page for <%= @mother_to_be.name %>'s Baby Shower.</p>
     <p class="lead">
         <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
     </p>
