--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,5 +7,5 @@
         <h3>Updates</h3>
         <%= render @user.updates %>
     <% end %>
-    <p><%= link_to 'Back', users_path %></p>
+    <p><%= link_to 'Back to Users', users_path, class: "btn btn-secondary" %></p>
 </div><!-- /.blog-main -->
