--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,26 +1,32 @@
 <div class="card">
   <div class="card-block">
-    <div class="row">
-      <div class="col-md-8">
-        <h2>Edit <%= resource_name.to_s.humanize %></h2>
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-          <%= devise_error_messages! %>
-
+    <h2 class="card-title">Edit <%= resource_name.to_s.humanize %></h2>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
+      <div class="row">
+        <div class="col-md-6">
           <div class="form-group">
             <%= f.label :name %><br />
             <%= f.text_field :name, autofocus: true, class: 'form-control' %>
-            <small id="nameHelp" class="form-text text-muted">First and last name.</small>
           </div>
 
           <div class="form-group">
             <%= f.label :email %><br />
             <%= f.email_field :email, class: 'form-control' %>
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
 
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
           <% end %>
+
+          <div class="form-group">
+            <%= f.label :avatar %></br>
+            <%= image_tag current_user.avatar, alt: "", class: "img-fluid rounded avatar" unless current_user.avatar.nil? %>
+            <%= f.text_field :avatar, class: 'form-control' %>
+          </div>
+
+        </div>
+        <div class="col-md-6">
 
           <div class="form-group">
             <%= f.label :password %> 
@@ -39,23 +45,23 @@
           </div>
 
           <div class="form-group">
-          <%= f.label :avatar %></br>
-          <%= image_tag current_user.avatar, alt: "", class: "img-fluid rounded" unless current_user.avatar.nil? %>
-          <%= f.text_field :avatar, class: 'form-control' %>
-          </div>
-
-          <div class="form-group">
             <%= f.label :current_password %>
             <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
             <small id="currentHelp" class="form-text text-muted">We need your current password to confirm your changes.</small>
           </div>
 
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
           <div class="form-group">
             <%= f.submit "Update", class: 'btn btn-primary btn-block' %>
           </div>
-        <% end %>
+        </div>
       </div>
-      <div class="col-md-4">
+    <% end %>
+    <div class="row">
+      <div class="col-md-12">
         <h2 class="card-title">Danger Zone</h2>
         <p>Want to cancel your account? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger btn-block' %></p>
       </div>
