implemented custom comment views

--- a/app/assets/stylesheets/updates.scss
+++ b/app/assets/stylesheets/updates.scss
@@ -193,3 +193,12 @@ h6, .h6 {
     width: 90%;    
   }
 }
+
+.comment-row, .comment-button {
+  margin-bottom: 2em;
+}
+
+.comment-row {
+  padding-top: 2em;
+  border-top: solid 2px #DDD;
+}
