--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,14 +1,38 @@
-<li>
-    <%= comment.body %>
-    <small>Posted by <%= link_to comment.user.name, user_path(comment.user) %> <%= distance_of_time_in_words(comment.created_at, Time.now) %> ago</small>
-
-    <%= form_for [@user, comment, Comment.new] do |f| %>
-        <%= f.text_area :body, placeholder: "Add a Reply" %><br/>
-        <%= f.hidden_field :comment_id, value: comment.id %>
-        <%= f.hidden_field :user_id, value: current_user.id %>
-        <%= f.submit "Reply" %>
-    <% end %>
-    <ul>
-        <%= render partial: 'comments/comment', collection: comment.comments %>
-    </ul>
-</li>
+<div class="row comment-row">
+    <div class="col-sm-3">
+        <%= image_tag comment.user.avatar, alt: "", class: "img-fluid rounded" unless comment.user.avatar.nil? %>
+    </div>
+    <div class="col-sm-9">
+        <div class="row">
+            <p class="h5"><%= link_to comment.user.name, user_path(comment.user) %></p>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <p>Replying to <%= link_to comment.commentable.user.name, user_path(comment.commentable.user) %></p>
+                </div>
+                <div class="row">
+                    <p class="lead"><%= comment.body %></p>
+                </div>
+                <div class="row">
+                    <p>Posted <%= time_ago_in_words(comment.created_at) %> ago</p>
+                </div>
+                <div class="row">
+                    <% if comment.user == current_user %>
+                        <p class="card-text blog-post-meta">
+                            <%= link_to 'Edit', edit_comment_path(comment), class: "btn btn-secondary" %>
+                            <%= link_to 'Delete Comment', comment, method: :delete, data: { confirm: 'Are you sure you want to delete that comment?' }, class: "btn btn-danger" %>
+                        </p>
+                    <% end %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<%= form_for [@user, comment, Comment.new] do |f| %>
+    <%= f.text_area :body, placeholder: "Add a Reply", class: "form-control" %><br/>
+    <%= f.hidden_field :comment_id, value: comment.id %>
+    <%= f.hidden_field :user_id, value: current_user.id %>
+    <%= f.submit "Reply", class: "btn btn-secondary comment-button" %>
+<% end %>
+<%= render partial: 'comments/comment', collection: comment.comments %>
