--- a/app/views/updates/show.html.erb
+++ b/app/views/updates/show.html.erb
@@ -24,11 +24,21 @@
                             </div>
                             <div class="row">
                                 <% if current_user.has_roles?(:admin, :mom, :helper) && @update.user == current_user %>
-                                    <p class="card-text blog-post-meta">
-                                        <%= link_to 'Edit', edit_update_path(@update), class: "btn btn-secondary" %>
-                                        <%= link_to 'Delete Update', @update, method: :delete, data: { confirm: 'Are you sure you want to delete that update?' }, class: "btn btn-danger" %>
-                                    </p>
+                                    <div class="col-6 card-text blog-post-meta">
+                                        <%= link_to 'Edit', edit_update_path(@update), class: "btn btn-secondary btn-block" %>
+                                    </div>
+                                    <div class="col-6 card-text blog-post-meta">
+                                        <%= link_to 'Delete Update', @update, method: :delete, data: { confirm: 'Are you sure you want to delete that update?' }, class: "btn btn-danger btn-block" %>
+                                    </div>
                                 <% end %>
+                            </div>
+                            <div class="row">
+                                <div class="col-6 card-text blog-post-meta">
+                                    <%= link_to pluralize(@update.comments.count, "Comment"), update_path(@update), class: "btn btn-secondary btn-block" %>
+                                </div>
+                                <div class="col-6 card-text blog-post-meta">
+                                    <%= link_to '0 Likes', update_path(@update), class: "btn btn-secondary btn-block" %>
+                                </div>
                             </div>
                         </div>
                     </div>
