--- a/app/views/updates/show.html.erb
+++ b/app/views/updates/show.html.erb
@@ -46,11 +46,13 @@
             </div>
         </div>
         <div class="card-block">
-            <%= form_for [@user, @update, Comment.new] do |f| %>
-                <%= f.text_area :body, placeholder: "Add a comment", class: "form-control" %>
-                <%= f.hidden_field :update_id, value: @update.id %>
-                <%= f.hidden_field :user_id, value: current_user.id %>
-                <%= f.submit "Add Comment", class: "btn btn-secondary" %>
+            <% unless current_user.is_a?(GuestUser) %>
+                <%= form_for [@user, @update, Comment.new] do |f| %>
+                    <%= f.text_area :body, placeholder: "Add a comment", class: "form-control" %>
+                    <%= f.hidden_field :update_id, value: @update.id %>
+                    <%= f.hidden_field :user_id, value: current_user.id %>
+                    <%= f.submit "Add Comment", class: "btn btn-secondary" %>
+                <% end %>
             <% end %>
         </div>
         <div class="card-block">
