--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,6 +2,6 @@
     <h1><%= @page_title %></h1>
     <p class="lead">About <%= @mother_to_be.name %>'s Baby Shower.</p>
     <p class="lead">
-        <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+        <%= link_to "Latest Updates", updates_path, class: "btn btn-lg btn-secondary" %>
     </p>
 </div>
