--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,6 +3,33 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <div class="card blog-post">
+        <%= image_tag "http://placehold.it/1500x600", alt: "", class: "img-fluid card-img-top" %>
+        <div class="card-block">
+            <div class="row">
+                <div class="col-12">
+                    <div class="row">
+                        <h2><%= @event.title %></h2>
+                    </div>
+                    <div class="row">
+                        <p class="lead card-text">
+                            <%= @event.event_datetime.localtime.strftime("%A, %B %d - %I:%M %p") %> <%= link_to "RSVP", root_url, class: "btn btn-primary" %>
+                        </p>
+                    </div>
+                    <div class="row">
+                        <p class="lead card-text">
+                            RSVP by <%= @event.rsvp_datetime.localtime.strftime("%A, %B %d - %I:%M %p") %>
+                        </p>
+                    </div>
+                    <div class="row">
+                        <p class="lead card-text">
+                            <%= @event.description %>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div><!-- /.blog-post -->
         
     <p><%= link_to 'Back to Events', events_path, class: "btn btn-secondary" %></p>
 </div><!-- /.blog-main -->
