--- a/app/views/shared/_update_nav.html.erb
+++ b/app/views/shared/_update_nav.html.erb
@@ -3,6 +3,7 @@
         <nav class="nav blog-nav">
             <%= link_to 'Home', root_path, class: 'nav-link' %>
             <%= link_to 'About', about_path, class: 'nav-link' %>
+            <%= link_to 'Events', events_path, class: 'nav-link' %>
             <%= link_to 'Updates', updates_path, class: 'nav-link' %>
             <%= link_to 'Contact', contact_path, class: 'nav-link' %>
             <%= login_helper 'nav-link' %>
