--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -36,52 +36,27 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <!-- Navigation -->
-    <nav class="navbar fixed-top navbar-toggleable-md navbar-light bg-faded">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="container">
-            <a class="navbar-brand" href="#">Start Bootstrap</a>
-            <div class="collapse navbar-collapse" id="navbarExample">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <%= render 'shared/landing_nav' %>
 
     <!-- Header -->
     <header class="intro-header">
+        <div class="darken-overlay">
         <div class="container">
             <div class="intro-message">
-                <h1>Landing Page</h1>
-                <h3>A Template by Start Bootstrap</h3>
+                <h1><%= @page_title %></h1>
                 <hr class="intro-divider">
                 <ul class="list-inline intro-social-buttons">
                     <li class="list-inline-item">
-                        <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <%= link_to "Latest Updates", updates_path, class: "btn btn-lg btn-secondary" %>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                        <%= link_to "#{Event.order(:event_datetime).first.title}", event_path(Event.order(:event_datetime).first), class: 'btn btn-lg btn-secondary' %>
                     </li>
                 </ul>
             </div>
         </div>
+        </div>
     </header>
-
-    <%= yield %>
 
     <!-- Page Content -->
     <section class="content-section-a">
@@ -91,11 +66,16 @@
                 <div class="col-lg-5">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">Good Food for Great Company</h2>
+                    <p>A variety of nourishing choices to meet diverse dietary lifestyles, including:</p>
+                    <ul>
+                        <li>Sub sandwiches courtesy of Subway</li>
+                        <li>Chicken and seafood kebabs from Zo&euml;s Kitchen</li>
+                        <li>And more...</li>
+                    </ul>
                 </div>
                 <div class="col-lg-5 offset-lg-2">
-                    <img class="img-fluid" src="img/ipad.png" alt="">
+                    <%= image_tag "subs.jpg", alt: "", class: "img-fluid rounded"%>
                 </div>
             </div>
 
@@ -111,11 +91,11 @@
                 <div class="col-lg-5 push-lg-7">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">Fun and Games for All</h2>
+                    <p>A welcoming space for loved ones of all ages and genders, with games and activities to help everyone enjoy themselves.</p>
                 </div>
                 <div class="col-lg-5 pull-lg-5">
-                    <img class="img-fluid" src="img/dog.png" alt="">
+                    <%= image_tag "game.jpg", alt: "", class: "img-fluid rounded"%>
                 </div>
             </div>
 
@@ -133,11 +113,11 @@
                 <div class="col-lg-5">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <h2 class="section-heading">Share a Special Moment with our Family</h2>
+                    <p>Spend quality time with the mom-to-be before the impending arrival of the newest member of the Constant family.</p>
                 </div>
                 <div class="col-lg-5 offset-lg-2">
-                    <img class="img-fluid" src="img/phones.png" alt="">
+                    <%= image_tag "ultrasound.jpg", alt: "", class: "img-fluid rounded"%>
                 </div>
             </div>
 
@@ -148,23 +128,21 @@
     <!-- /.content-section-a -->
 
     <aside class="banner">
+        <div class="darken-overlay banner-overlay">
 
         <div class="container">
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
+                    <h2>She's Registered:</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item">
-                            <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <%= link_to "Target", "http://www.target.com/gift-registry/giftgiver?registryId=0435f36ea234455796649e67df50fd0e", class: "btn btn-secondary btn-lg" %>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <%= link_to "Babies R Us", "https://www.toysrus.com/registry/link/index.jsp?overrideStore=TRUS&registryNumber=59455539", class: "btn btn-secondary btn-lg" %>
                         </li>
                     </ul>
                 </div>
@@ -176,29 +154,7 @@
     </aside>
     <!-- /.banner -->
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <ul class="list-inline">
-                <li class="list-inline-item">
-                    <a href="#">Home</a>
-                </li>
-                <li class="footer-menu-divider list-inline-item">&sdot;</li>
-                <li class="list-inline-item">
-                    <a href="#about">About</a>
-                </li>
-                <li class="footer-menu-divider list-inline-item">&sdot;</li>
-                <li class="list-inline-item">
-                    <a href="#services">Services</a>
-                </li>
-                <li class="footer-menu-divider list-inline-item">&sdot;</li>
-                <li class="list-inline-item">
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-            <p class="copyright text-muted small">Copyright &copy; Your Company 2017. All Rights Reserved</p>
-        </div>
-    </footer>
+    <%= render 'shared/landing_footer'%>
 
   </body>
 </html>
