--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,7 +1,22 @@
-<div class="inner cover">
-    <h1><%= @page_title %></h1>
-    <p class="lead">Here are some Frequently Asked Questions about <%= @mother_to_be.name %> Baby Shower.</p>
-    <p class="lead">
-        <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-    </p>
-</div>
+<!-- Page Content -->
+<section class="content-section-a">
+
+    <div class="container">
+        <div class="row">
+            <p class="notice"><%= notice %></p>
+            <p class="alert"><%= alert %></p>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <h2><%= @page_title %></h2>
+                <p class="lead">Here are some Frequently Asked Questions about <%= @mother_to_be.name %> Baby Shower.</p>
+                <p class="lead">
+                    <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- /.container -->
+</section>
