--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -52,7 +52,7 @@ body {
 .intro-message > h1 {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
-    font-size: 5em;
+    font-size: 3em;
 }
 
 .intro-divider {
@@ -122,7 +122,6 @@ body {
 .banner h2 {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
-    font-size: 3em;
 }
 
 .banner ul {
@@ -175,6 +174,17 @@ p.copyright {
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.5);
+}
+
+.darken-overlay-short {
+    position: relative;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.intro-short {
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .banner-overlay {
