--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,23 @@
-<div class="inner cover">
-    <h1><%= @page_title %></h1>
-    <p class="lead">About <%= @mother_to_be.name %>'s Baby Shower.</p>
-    <p class="lead">
-        <%= link_to "Latest Updates", updates_path, class: "btn btn-lg btn-secondary" %>
-        <%= link_to "#{@event.title}", event_path(@event), class: 'btn btn-lg btn-primary' %>
-    </p>
-</div>
+<!-- Page Content -->
+<section class="content-section-a">
+
+    <div class="container">
+        <div class="row">
+            <p class="notice"><%= notice %></p>
+            <p class="alert"><%= alert %></p>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <h2><%= @page_title %></h2>
+                <p class="lead">About <%= @mother_to_be.name %>'s Baby Shower.</p>
+                <p class="lead">
+                    <%= link_to "Latest Updates", updates_path, class: "btn btn-lg btn-secondary" %>
+                    <%= link_to "#{@event.title}", event_path(@event), class: 'btn btn-lg btn-primary' %>
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- /.container -->
+</section>
